<resources>
    <string name="app_name">Get your things done</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_create_note">Create Note</string>
    <string name="note_title">Title</string>
    <string name="note_description">Description</string>
    <string name="note_date">Date</string>
    <string name="no_title">Please add title</string>
    <string name="switch_date">no date</string>
    <string name="shared_preferences_list" translatable="false">com.example.getyourthingsdone.list</string>
    <string name="get_data_from_database">Get list from database</string>
    <string name="send_data_to_database">Send list to database</string>
    <string name="success">Success</string>
    <string name="fail">Failed!</string>
    <string name="give_length_event">length of the event (minutes)</string>
    <string name="delete_data_from_database">Delete list form database</string>
    <string name="logout">Logout</string>
</resources>