<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.getyourthingsdone.activities.NotesActivity">
    <item
        android:id="@+id/action_get_data_from_database"
        android:orderInCategory="100"
        android:title="@string/get_data_from_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_data_to_database"
        android:orderInCategory="100"
        android:title="@string/send_data_to_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_data_from_database"
        android:orderInCategory="100"
        android:title="@string/delete_data_from_database"
        app:showAsAction="never" />
</menu>